@@ -1,3 +1,7 @@
+Thu Aug 21 23:18:40 2003  Joern Thyssen  <jth@gnubg.org>
+
+	* Makefile.am, configure.in: add texture directory.
+
 Thu Aug 21 20:25:51 2003  Joern Thyssen  <jth@gnubg.org>
 
 	* gtkcube.c (OutputPercentsTable): show headers on 
